Closed
Bug 951904
Opened 12 years ago
Closed 6 years ago
Assertion failure: false (should have already reflowed the kid), at /src/layout/svg/SVGTextFrame.cpp:5224
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
mozilla68
People
(Reporter: jruderman, Assigned: violet.bugreport)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
No description provided.
| Reporter | ||
Comment 1•12 years ago
|
||
Updated•8 years ago
|
Blocks: grizzly
status-firefox59:
--- → affected
status-firefox60:
--- → affected
OS: Mac OS X → Unspecified
Updated•8 years ago
|
Flags: in-testsuite?
Summary: "Assertion failure: false (should have already reflowed the kid)" with transform, abs pos → Assertion failure: false (should have already reflowed the kid), at /src/layout/svg/SVGTextFrame.cpp:5224
| Comment hidden (obsolete) |
Updated•6 years ago
|
Assignee: nobody → violet.bugreport
Updated•6 years ago
|
Attachment #9049724 -
Attachment description: Bug 951904 - Avoid UpdateGlyphPositioning for an inactive child of an SVG switch element → Bug 951904 - SVGTextFrame should always be reflowed even if it is inside a nonactive child of switch element
| Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Pushed by nerli@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/806b2a3b5bb1
SVGTextFrame should always be reflowed even if it is inside a nonactive child of switch element r=longsonr
Keywords: checkin-needed
Comment 5•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox68:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Updated•6 years ago
|
status-firefox66:
--- → wontfix
status-firefox67:
--- → wontfix
status-firefox-esr60:
--- → wontfix
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•